[gd_scene load_steps=10 format=3 uid="uid://1c257f21k3oc"]

[ext_resource type="Script" path="res://scenes/game/tetromino/bubble.gd" id="1_bpdb4"]
[ext_resource type="Texture2D" uid="uid://b5kd6bl7nfnfw" path="res://scenes/game/tetromino/NewBubble.png" id="2_f0cui"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vlpxg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wx47q"]

[sub_resource type="Animation" id="Animation_ombim"]
resource_name = "Place"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bubble:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bubble:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.733333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.24787, 1.23384), Vector2(1.24787, 1.17942), Vector2(1.24787, 1.23384)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Bubble:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_h2r8m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bubble:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bubble:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.24787, 1.21768)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Bubble:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Bubble:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_4brws"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bubble:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.24787, 1.21768), Vector2(1.30091, 1.32356), Vector2(1.24787, 1.21768), Vector2(1.30091, 1.32356), Vector2(1.24787, 1.21768)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bubble:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.122173, 0.0183307, 0.0, 0.122173, 0.0183307]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Bubble:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.233333, 0.366667, 0.5, 0.633333, 0.733333, 0.866667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, -1), Vector2(0, -1), Vector2(1, -1), Vector2(1, 0), Vector2(1, 1), Vector2(0, 1), Vector2(-1, 1), Vector2(-2.38419e-07, 0)]
}

[sub_resource type="Animation" id="Animation_e3y76"]
resource_name = "coyote"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bubble:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.521569), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xjgxk"]
_data = {
"Place": SubResource("Animation_ombim"),
"RESET": SubResource("Animation_h2r8m"),
"coyote": SubResource("Animation_e3y76"),
"idle": SubResource("Animation_4brws")
}

[node name="Bubble" type="Node2D"]
script = ExtResource("1_bpdb4")

[node name="Bubble" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.24787, 1.21768)
texture = ExtResource("2_f0cui")

[node name="SlamCast" type="RayCast2D" parent="."]
unique_name_in_owner = true
scale = Vector2(1.01766, 1.07232)
target_position = Vector2(0, -656)
collide_with_areas = true
collide_with_bodies = false

[node name="DetectionRows" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Row[-2]" type="Node2D" parent="DetectionRows"]

[node name="Area[0]" type="Area2D" parent="DetectionRows/Row[-2]"]
position = Vector2(0, -64)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRows/Row[-2]/Area[0]"]
shape = SubResource("CircleShape2D_vlpxg")

[node name="Row[-1]" type="Node2D" parent="DetectionRows"]

[node name="Area[-1]" type="Area2D" parent="DetectionRows/Row[-1]"]
position = Vector2(-32, -32)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRows/Row[-1]/Area[-1]"]
shape = SubResource("CircleShape2D_vlpxg")

[node name="Area[0]" type="Area2D" parent="DetectionRows/Row[-1]"]
position = Vector2(0, -32)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRows/Row[-1]/Area[0]"]
shape = SubResource("CircleShape2D_vlpxg")

[node name="Area[1]" type="Area2D" parent="DetectionRows/Row[-1]"]
position = Vector2(32, -32)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRows/Row[-1]/Area[1]"]
shape = SubResource("CircleShape2D_vlpxg")

[node name="Row[0]" type="Node2D" parent="DetectionRows"]

[node name="Area[-2]" type="Area2D" parent="DetectionRows/Row[0]"]
position = Vector2(-64, 0)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRows/Row[0]/Area[-2]"]
shape = SubResource("CircleShape2D_vlpxg")

[node name="Area[-1]" type="Area2D" parent="DetectionRows/Row[0]"]
position = Vector2(-32, 0)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRows/Row[0]/Area[-1]"]
shape = SubResource("CircleShape2D_vlpxg")

[node name="Area[0]" type="Area2D" parent="DetectionRows/Row[0]"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRows/Row[0]/Area[0]"]
shape = SubResource("CircleShape2D_wx47q")

[node name="Area[1]" type="Area2D" parent="DetectionRows/Row[0]"]
position = Vector2(32, 0)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRows/Row[0]/Area[1]"]
shape = SubResource("CircleShape2D_vlpxg")

[node name="Area[2]" type="Area2D" parent="DetectionRows/Row[0]"]
position = Vector2(64, 0)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRows/Row[0]/Area[2]"]
shape = SubResource("CircleShape2D_vlpxg")

[node name="Row[1]" type="Node2D" parent="DetectionRows"]

[node name="Area[-1]" type="Area2D" parent="DetectionRows/Row[1]"]
position = Vector2(-32, 32)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRows/Row[1]/Area[-1]"]
shape = SubResource("CircleShape2D_vlpxg")

[node name="Area[0]" type="Area2D" parent="DetectionRows/Row[1]"]
position = Vector2(0, 32)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRows/Row[1]/Area[0]"]
shape = SubResource("CircleShape2D_vlpxg")

[node name="Area[1]" type="Area2D" parent="DetectionRows/Row[1]"]
position = Vector2(32, 32)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRows/Row[1]/Area[1]"]
shape = SubResource("CircleShape2D_vlpxg")

[node name="Row[2]" type="Node2D" parent="DetectionRows"]

[node name="Area[0]" type="Area2D" parent="DetectionRows/Row[2]"]
position = Vector2(0, 64)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRows/Row[2]/Area[0]"]
shape = SubResource("CircleShape2D_vlpxg")

[node name="BubbleAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_xjgxk")
}
speed_scale = 0.2
